--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "f8-k11",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"start": "json-server --watch db.json --port 3000 -m ./node_modules/json-server-auth"
 	},
 	"keywords": [
 		"nodejs",
@@ -14,7 +14,7 @@
 	"author": "hoangnm",
 	"license": "MIT",
 	"dependencies": {
-		"json-server": "^0.17.4"
-	},
-	"devDependencies": {}
+		"json-server": "^0.17.4",
+		"json-server-auth": "^2.1.0"
+	}
 }
