--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"json-server": "^0.17.4",
-		"json-server-auth": "^2.1.0"
+		"json-server-auth": "^2.1.0",
+		"toastify-js": "^1.12.0"
 	}
 }
