--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "vite",
+		"dev": "concurrently \"vite\" \"json-server-auth --watch db.json --port 3000\"",
 		"build": "vite build",
 		"preview": "vite preview"
 	},
@@ -12,6 +12,9 @@
 		"vite": "^5.2.0"
 	},
 	"dependencies": {
+		"concurrently": "^9.1.2",
+		"json-server": "^0.17.4",
+		"json-server-auth": "^2.1.0",
 		"navigo": "^8.11.1"
 	}
 }
